# henry

./: .env.example  .gitignore  CLA.md  README.md  alembic.ini  compose.yaml  design-overview.html  mcp.json.example  pyproject.toml  slack-app-manifest.yml
docs/implementation/: 2026-06-23-henry-foundation-implementation.html
docs/plans/: 2026-06-23-henry-design.md  2026-06-23-henry-v1-implementation.md  2026-07-13-mcp-integrations-implementation.md  2026-07-13-mcp-integrations.html  2026-07-13-mcp-integrations.md  2026-07-14-support-engineer-roadmap.md
henry/: __init__.py  app.py  branding.py  contracts.py  interfaces.py  sandbox_types.py  sanitize.py  settings.py  types.py  wiring.py
henry/agent/: __init__.py  _tools.py  model.py  prompt.py  runner.py
henry/config/: __init__.py  defaults.json  registry.py
scripts/: smoke.py
tests/: conftest.py  slack_twin.py  test_agent_model.py  test_agent_prompt.py  test_agent_runner.py  test_app.py  test_builtin_integrations.py  test_config_registry.py  test_db_models.py  test_docker_sandbox.py  test_fakes.py  test_integration_registry.py  test_interfaces.py  test_kernel_entry.py  test_kernel_integration.py  test_kernel_protocol.py  test_mcp_config.py  test_mcp_e2e.py  test_mcp_integration.py  test_memory_postgres.py  test_memory_summarizer.py  test_memory_tools.py  test_orchestrator_locks.py  test_orchestrator_runner.py  test_sandbox_tools.py  test_sandbox_types.py  test_sanitize.py  test_settings.py  test_slack_app.py  test_slack_context.py  test_slack_socket_e2e.py  test_slack_twin_e2e.py  test_types.py  test_wiring.py
(+36 files in other folders)
