[project]
name = "henry"
version = "0.1.0"
description = "Open-source, self-hosted, model-agnostic AI teammate for Slack"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
readme = "README.md"
dependencies = [
    # NOTE (F1): pin pydantic-ai to an exact version after first resolve (`uv add pydantic-ai`).
    # Its tool/model API moves across minors — the plan codes against a specific version.
    "pydantic-ai",
    "slack-bolt>=1.21",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "docker>=7.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 110

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["henry"]
